# pytorch-maml-rl

./: .gitignore  README.md  gym_test.py  log_viewer.py  main.py  main_2.py  main_test.py  make_traj_anim.py  make_traj_plot.py  requirements.txt  test.py  test_ray.py  train.py  train_maml.py  train_ray.py
Python-RVO2/: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  example.py  requirements.txt  rvo2-navmesh-test.blend  setup.py
Python-RVO2/doc/: Doxyfile  footer.html  header.html  stylesheet.css
Python-RVO2/examples/: Blocks.cpp  CMakeLists.txt  Circle.cpp  Roadmap.cpp
Python-RVO2/src/: CMakeLists.txt  RVO.h  rvo2.pyx
TrainingResults/: eval_rewards.xlsx  note for 张梦璇.rtf  notes.rtf  plot_eval_rewards.m  plotrewards.m  rewards.xlsx
TrainingResults/TrainingSettings/: baseline.py  main.py
configs/maml/: 2d-navigation.yaml  ant-dir.yaml  ant-goal.yaml  ant-vel.yaml  (+5 more)
maml_rl/: baseline.py  episode.py  evaluation.py  make_traj_anim.py  metalearner.py  sampler.py
maml_rl_sa/: baseline.py
plots_and_animation/: make_traj_anim.py
plotting/: plot_all.py  plot_ant.py  plot_meta_batch_size.py  plot_n_tasks.py  plot_ood.py  tensorboard_read.py
test_nav/: task.pkl  test_episodes_grad0.pkl  test_episodes_grad1.pkl  test_episodes_grad2.pkl  test_episodes_grad3.pkl  test_episodes_grad<maml_rl.episode.BatchEpisodes object at 0x1123160b8>.pkl  test_episodes_grad<maml_rl.episode.BatchEpisodes object at 0x117b21080>.pkl  test_episodes_grad<maml_rl.episode.BatchEpisodes object at 0x119d99080>.pkl  test_peds_grad0.pkl  test_peds_grad1.pkl
(+165 files in other folders)
